[package]
name = "argonfand"
version = "1.0.3"
authors = ["Adrian Woźniak <adrian.wozniak.1986@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "Single threaded minimalistic ArgonOne case fan control"

[dependencies]
rppal = { version = "0.11.3" }
gpio = { version = "0.4.1" }
gumdrop = { version = "0.8.0" }
serde = { version = "1.0.125", features = ["derive"] }
toml = { version = "0.5.8" }
static-alloc = { version = "0.2.3" }
